# labplus_mpython_esp32s3

./: .gitmodules  README.md
port/: .gitignore  CMakeLists.txt  esp32_common.cmake  makeimg.py  mklittlefs  升级到micropython_v1.23.0.md  升级到micropython_v1.24.1.md
port/boards/: bsp_audio_board.c  bsp_audio_board.h  manifest.py  sdkconfig.base  sdkconfig.idf52
port/boards/labplus_Ledong_pro/: partitions-8MiB.csv
port/boards/labplus_Ledong_v2/: board.md  bsp_audio_board.c  mpconfigboard.cmake  mpconfigboard.h  partitions-16MiB.csv  sdkconfig.board
port/boards/labplus_for_xuejing/: bsp_audio_board.c  main.c  mpconfigboard.cmake  mpconfigboard.h  partitions-8MiB.csv  sdkconfig.board
port/boards/labplus_xunfei_js_middle/: bsp_audio_board.c  mpconfigboard.h  (+3 more)
port/builtins/: machine_i2c.c  machine_i2c_extmod.c  machine_timer.c  machine_touchpad.c  main.c  modaudio.c  modframebuf.c  modmusic.c  modtest.c  modtest.c.bk  network_wlan.c
port/components/gen_bmgr_codes/: CMakeLists.txt  board_manager.defaults  gen_board_device_config.c  gen_board_device_handles.c  gen_board_info.c  gen_board_periph_config.c  gen_board_periph_handles.c  idf_component.yml
port/lockfiles/: dependencies.lock.esp32s3
port/main/: Kconfig.projbuild  idf_component.yml
port/main_esp32s3/: Kconfig.projbuild
port/modules/: ATGM336H_5N.py  _ntptime.py  acd1200.py  aes128.py  apds9960.py  bluebit.py  forece.py  gui.py  lv_utils.py  max30102.py  mddrv8837.py  mfrc.py  paj7620.py  pm25.py  radio.py  siot.py  umail.py  xgo.py  xunfei.py
port/usercmodule/: micropython.cmake
share/cmodule/: lv_mp.c
(+316 files in other folders)
